<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
android:orientation="vertical"
xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
android:layout_height="wrap_content">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:text="Roll no"
    android:id="@+id/tv_rollno"
    android:textSize="16dp"
    android:textStyle="bold"/>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:text="Name"
    android:id="@+id/tv_name"
    android:textSize="16dp"
    android:textStyle="bold"/>
<View
    android:layout_width="match_parent"
    android:layout_height="0.5dp"
    android:background="@color/colorPrimaryDark"/>
</LinearLayout>